--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Verificar e Criar Banco de Dados</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+
 <body>
-    <h1>Hello World</h1>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col text-center">
+                <h1>Gerenciar Banco de Dados</h1>
+                <div id="message"></div>
+                <button id="createDBBtn" class="btn btn-primary d-none">Criar Novo Banco de Dados</button>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            // Verificar se o banco de dados já existe no armazenamento local
+            if (!localStorage.getItem('indicadores.db')) {
+                // Mostrar a mensagem e o botão
+                document.getElementById('message').innerHTML = '<p>O banco de dados <strong>indicadores.db</strong> não existe no navegador.</p>';
+                document.getElementById('createDBBtn').classList.remove('d-none');
+            } else {
+                // Mostrar mensagem que o banco de dados já existe
+                document.getElementById('message').innerHTML = '<p>O banco de dados <strong>indicadores.db</strong> já está salvo no navegador.</p>';
+            }
+
+            // Adicionar evento ao botão para criar o banco de dados
+            document.getElementById('createDBBtn').addEventListener('click', function () {
+                // Criar o banco de dados e salvar no armazenamento local
+                localStorage.setItem('indicadores.db', 'Dados do banco de dados inicializados.');
+                document.getElementById('message').innerHTML = '<p>O banco de dados <strong>indicadores.db</strong> foi criado e salvo no navegador.</p>';
+                document.getElementById('createDBBtn').classList.add('d-none');
+            });
+        });
+    </script>
 </body>
+
 </html>
