--- a/index.html
+++ b/index.html
@@ -15,21 +15,25 @@
             <div class="col text-center">
                 <h1>Gerenciar Banco de Dados</h1>
                 <div id="message"></div>
-                <button id="createDBBtn" class="btn btn-primary d-none">Criar Novo Banco de Dados</button>
+                <div id="buttons"> <button id="createDBBtn" class="btn btn-primary d-none">Criar Novo Banco de
+                        Dados</button> <button id="downloadDBBtn" class="btn btn-success d-none">Baixar Banco de
+                        Dados</button> <button id="deleteDBBtn" class="btn btn-danger d-none">Excluir Banco de
+                        Dados</button> </div>
             </div>
         </div>
     </div>
-
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             // Verificar se o banco de dados já existe no armazenamento local
             if (!localStorage.getItem('indicadores.db')) {
-                // Mostrar a mensagem e o botão
+                // Mostrar a mensagem e o botão de criar novo banco de dados
                 document.getElementById('message').innerHTML = '<p>O banco de dados <strong>indicadores.db</strong> não existe no navegador.</p>';
                 document.getElementById('createDBBtn').classList.remove('d-none');
             } else {
                 // Mostrar mensagem que o banco de dados já existe
                 document.getElementById('message').innerHTML = '<p>O banco de dados <strong>indicadores.db</strong> já está salvo no navegador.</p>';
+                document.getElementById('downloadDBBtn').classList.remove('d-none');
+                document.getElementById('deleteDBBtn').classList.remove('d-none');
             }
 
             // Adicionar evento ao botão para criar o banco de dados
@@ -38,6 +42,30 @@
                 localStorage.setItem('indicadores.db', 'Dados do banco de dados inicializados.');
                 document.getElementById('message').innerHTML = '<p>O banco de dados <strong>indicadores.db</strong> foi criado e salvo no navegador.</p>';
                 document.getElementById('createDBBtn').classList.add('d-none');
+                document.getElementById('downloadDBBtn').classList.remove('d-none');
+                document.getElementById('deleteDBBtn').classList.remove('d-none');
+            });
+
+            // Adicionar evento ao botão para baixar o banco de dados
+            document.getElementById('downloadDBBtn').addEventListener('click', function () {
+                // Simular o download do banco de dados
+                var dataStr = "data:text/json;charset=utf-8," + encodeURIComponent(localStorage.getItem('indicadores.db'));
+                var downloadAnchorNode = document.createElement('a');
+                downloadAnchorNode.setAttribute("href", dataStr);
+                downloadAnchorNode.setAttribute("download", "indicadores.db");
+                document.body.appendChild(downloadAnchorNode);
+                downloadAnchorNode.click();
+                downloadAnchorNode.remove();
+            });
+
+            // Adicionar evento ao botão para excluir o banco de dados
+            document.getElementById('deleteDBBtn').addEventListener('click', function () {
+                // Excluir o banco de dados do armazenamento local
+                localStorage.removeItem('indicadores.db');
+                document.getElementById('message').innerHTML = '<p>O banco de dados <strong>indicadores.db</strong> foi excluído do navegador.</p>';
+                document.getElementById('downloadDBBtn').classList.add('d-none');
+                document.getElementById('deleteDBBtn').classList.add('d-none');
+                document.getElementById('createDBBtn').classList.remove('d-none');
             });
         });
     </script>
