--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+!DOCTYPE html> <html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -19,6 +18,9 @@
                         Dados</button> <button id="downloadDBBtn" class="btn btn-success d-none">Baixar Banco de
                         Dados</button> <button id="deleteDBBtn" class="btn btn-danger d-none">Excluir Banco de
                         Dados</button> </div>
+                <div id="periodSelector" class="mt-3 d-none"> <label for="periodSelect">Selecione o período:</label>
+                    <select id="periodSelect" class="form-select"></select> <button id="addPeriodBtn"
+                        class="btn btn-primary mt-2">Adicionar Novo Período</button> </div>
             </div>
         </div>
     </div>
