--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
-!DOCTYPE html> <html lang="pt-br">
+<!DOCTYPE html>
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Verificar e Criar Banco de Dados</title>
+    <title>Gerenciar Banco de Dados</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/date-fns@2.28.0/dist/date-fns.min.js"></script>
+
+
 </head>
 
 <body>
@@ -14,16 +20,45 @@
             <div class="col text-center">
                 <h1>Gerenciar Banco de Dados</h1>
                 <div id="message"></div>
-                <div id="buttons"> <button id="createDBBtn" class="btn btn-primary d-none">Criar Novo Banco de
-                        Dados</button> <button id="downloadDBBtn" class="btn btn-success d-none">Baixar Banco de
-                        Dados</button> <button id="deleteDBBtn" class="btn btn-danger d-none">Excluir Banco de
-                        Dados</button> </div>
-                <div id="periodSelector" class="mt-3 d-none"> <label for="periodSelect">Selecione o período:</label>
-                    <select id="periodSelect" class="form-select"></select> <button id="addPeriodBtn"
-                        class="btn btn-primary mt-2">Adicionar Novo Período</button> </div>
+                <button id="createDBBtn" class="btn btn-primary d-none">Criar Novo Banco de Dados</button>
+                <button id="downloadDBBtn" class="btn btn-success d-none">Baixar Banco de Dados</button>
+                <input type="file" id="uploadDBInput" class="form-control-file d-none">
+                <button id="loadDBBtn" class="btn btn-info d-none">Carregar Banco de Dados Baixado</button>
+                <button id="deleteDBBtn" class="btn btn-danger d-none">Excluir Banco de Dados</button>
+                <!-- Modal de Confirmação para Excluir Banco de Dados -->
+                <div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="confirmDeleteModalLabel">Confirmar Exclusão</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                Tem certeza de que deseja excluir o banco de dados <strong>indicadores.db</strong>?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary"
+                                    data-bs-dismiss="modal">Cancelar</button>
+                                <button id="confirmDeleteBtn" type="button" class="btn btn-danger">Excluir</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="eventManagement" class="mt-4 d-none">
+                    <h2>Gerenciar Datas de Eventos</h2>
+                    <div class="input-group mb-3">
+                        <input type="date" id="eventDateInput" class="form-control">
+                        <button id="addEventDateBtn" class="btn btn-primary">Adicionar Data</button>
+                    </div>
+                    <div id="eventDateList"></div>
+                </div>
             </div>
         </div>
     </div>
+
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             // Verificar se o banco de dados já existe no armazenamento local
@@ -36,16 +71,17 @@
                 document.getElementById('message').innerHTML = '<p>O banco de dados <strong>indicadores.db</strong> já está salvo no navegador.</p>';
                 document.getElementById('downloadDBBtn').classList.remove('d-none');
                 document.getElementById('deleteDBBtn').classList.remove('d-none');
+                document.getElementById('eventManagement').classList.remove('d-none');
+                loadEventDates();
             }
 
             // Adicionar evento ao botão para criar o banco de dados
             document.getElementById('createDBBtn').addEventListener('click', function () {
                 // Criar o banco de dados e salvar no armazenamento local
-                localStorage.setItem('indicadores.db', 'Dados do banco de dados inicializados.');
+                localStorage.setItem('indicadores.db', JSON.stringify({ eventDates: [] }));
                 document.getElementById('message').innerHTML = '<p>O banco de dados <strong>indicadores.db</strong> foi criado e salvo no navegador.</p>';
-                document.getElementById('createDBBtn').classList.add('d-none');
-                document.getElementById('downloadDBBtn').classList.remove('d-none');
-                document.getElementById('deleteDBBtn').classList.remove('d-none');
+                toggleButtonsVisibility(true);
+                loadEventDates();
             });
 
             // Adicionar evento ao botão para baixar o banco de dados
@@ -62,13 +98,101 @@
 
             // Adicionar evento ao botão para excluir o banco de dados
             document.getElementById('deleteDBBtn').addEventListener('click', function () {
+                // Abrir o modal de confirmação
+                var confirmDeleteModal = new bootstrap.Modal(document.getElementById('confirmDeleteModal'), {
+                    keyboard: false
+                });
+                confirmDeleteModal.show();
+            });
+
+            // Evento ao clicar no botão de confirmar exclusão no modal
+            document.getElementById('confirmDeleteBtn').addEventListener('click', function () {
                 // Excluir o banco de dados do armazenamento local
                 localStorage.removeItem('indicadores.db');
                 document.getElementById('message').innerHTML = '<p>O banco de dados <strong>indicadores.db</strong> foi excluído do navegador.</p>';
-                document.getElementById('downloadDBBtn').classList.add('d-none');
-                document.getElementById('deleteDBBtn').classList.add('d-none');
-                document.getElementById('createDBBtn').classList.remove('d-none');
+                toggleButtonsVisibility(false);
+
+                // Fechar o modal de confirmação
+                var confirmDeleteModal = bootstrap.Modal.getInstance(document.getElementById('confirmDeleteModal'));
+                confirmDeleteModal.hide();
             });
+
+            // Adicionar evento ao botão para adicionar nova data de evento
+            document.getElementById('addEventDateBtn').addEventListener('click', function () {
+                addEventDate();
+            });
+
+            // Função para carregar as datas de evento do banco de dados
+            function loadEventDates() {
+                var db = JSON.parse(localStorage.getItem('indicadores.db'));
+                var eventDateList = document.getElementById('eventDateList');
+
+                // Limpar as datas de evento existentes
+                eventDateList.innerHTML = '';
+
+                // Adicionar as datas de evento
+                db.eventDates.forEach(function (eventDate) {
+                    var dateDiv = document.createElement('div');
+                    dateDiv.classList.add('input-group', 'mb-3');
+
+                    var formattedDate = formatDate(eventDate);
+
+                    var dateText = document.createElement('span');
+                    dateText.classList.add('form-control');
+                    dateText.textContent = formattedDate;
+
+                    var deleteBtn = document.createElement('button');
+                    deleteBtn.classList.add('btn', 'btn-danger');
+                    deleteBtn.innerHTML = '<i class="bi bi-trash"></i>';
+                    deleteBtn.addEventListener('click', function () {
+                        removeEventDate(eventDate);
+                    });
+
+                    dateDiv.appendChild(dateText);
+                    dateDiv.appendChild(deleteBtn);
+                    eventDateList.appendChild(dateDiv);
+                });
+            }
+
+            // Função para adicionar nova data de evento
+            function addEventDate() {
+                var newEventDate = document.getElementById('eventDateInput').value;
+                if (newEventDate) {
+                    var db = JSON.parse(localStorage.getItem('indicadores.db'));
+                    db.eventDates.push(newEventDate);
+                    localStorage.setItem('indicadores.db', JSON.stringify(db));
+                    loadEventDates();
+                    document.getElementById('eventDateInput').value = '';
+                }
+            }
+
+            // Função para remover data de evento
+            function removeEventDate(eventDate) {
+                var db = JSON.parse(localStorage.getItem('indicadores.db'));
+                db.eventDates = db.eventDates.filter(function (date) {
+                    return date !== eventDate;
+                });
+                localStorage.setItem('indicadores.db', JSON.stringify(db));
+                // dateDiv.remove();
+                loadEventDates();
+            }
+
+            // Função para alternar a visibilidade dos botões com base na existência do banco de dados
+            function toggleButtonsVisibility(exists) {
+                document.getElementById('createDBBtn').classList.toggle('d-none', exists);
+                document.getElementById('downloadDBBtn').classList.toggle('d-none', !exists);
+                document.getElementById('deleteDBBtn').classList.toggle('d-none', !exists);
+                document.getElementById('eventManagement').classList.toggle('d-none', !exists);
+            }
+            // Função para formatar a data
+            function formatDate(dateStr) {
+                var date = new Date(dateStr);
+                var day = date.getDate();
+                var month = date.toLocaleString('default', { month: 'long' });
+                var weekday = date.toLocaleString('default', { weekday: 'long' });
+
+                return `${day} de ${month} - ${weekday}`;
+            }
         });
     </script>
 </body>
